slider overflow fixed

--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -40,7 +40,8 @@
   align-items: center;
   justify-content: space-evenly;
   height: 100%;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
+  font-family: "Roboto", "Verdana", "Geneva", sans-serif;
   /* text-align: center; */
 }
 .introHeading{
@@ -146,14 +147,14 @@ input[type="file"]::file-selector-button {
 
 .uploadbutton {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   padding: 10px;
   /* border: 2px dashed #4CAF50;  */
   border-radius: 5px;
-  margin: 10px 20px;
+  margin: 5px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  scale: 0.88;
+  scale: 0.8;
 }
 
 .uploadBoxes {
