--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -92,7 +92,7 @@
   min-width: 225px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 5px 7px;
-  z-index: 1;
+  z-index: 2;
   border-radius: 4px;
 }
 
