--- a/src/styles/ProcessPage.css
+++ b/src/styles/ProcessPage.css
@@ -16,13 +16,13 @@ body {
   justify-content: center;
   align-items: center;
   /* padding-top: 2%; */
-  /* background: linear-gradient(
+  background: linear-gradient(
     180deg,
     rgb(206, 218, 238) 0%,
     rgb(235, 239, 246) 25%,
     rgb(255, 255, 255) 52%
-  ); */
-  background-color: #fff;
+  );
+  /* background-color: #fff; */
   position: relative;
 }
 .left,
@@ -59,6 +59,9 @@ body {
   /* background-color: rgba(255, 255, 255, 0.5); Translucent white */
   margin-bottom: 10px;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
   /* border: 2px solid #a5a5a5; */
   /* border: 3px dashed rgb(62, 56, 56); */
   /* align-items: center;
@@ -69,12 +72,12 @@ body {
   padding-left: 1%; */
   /* box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); */
 }
-.image-container img {
+/* .image-container img { */
   /* width: 500px;
   height: 300px;
   scale: 1.3; */
   /* object-fit: fill; */
-}
+/* } */
 button {
   margin-right: 20px;
   border: none;
@@ -121,21 +124,20 @@ button {
 }
 
 .project-name {
-  background-color: white;
+  /* background-color: white; */
   color: rgb(13, 25, 114);
   font-weight: bolder;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 1rem;
   padding-right: 1rem;
-  border-radius: 7rem;
+  /* border-radius: 7rem; */
   /* position: absolute; */
   /* min-width: fit-content; */
 }
 
 .slider-holder-single {
   box-shadow: rgba(149, 157, 165, 0.7) 0px 8px 24px;
-  scale: 1.04;
   outline: 5px solid white;
   margin-top: 3rem;
 }
@@ -224,10 +226,12 @@ button {
   border-radius: 5px;
 }
 .loaderHolder{
-  /* display: flex; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
   /* margin-top: 50%; */
-  margin-left: 40%;
-  margin-top: 30%;
+  /* margin-left: 40%;
+  margin-top: 30%; */
 }
 
 .firstRowButtons{
@@ -246,4 +250,91 @@ button {
   right: 4rem;
   top: 2rem;
   gap: 0.5rem;
+}
+
+.toggles{
+  position: absolute;
+
+  right: 2rem;
+  top: 2em;
+  /* gap: 1em; */
+
+  border-radius: 10em;
+  overflow: visible;
+
+  height: 3em;
+  width: 20em;
+
+  display: flex;
+  flex-direction: row;
+
+  > * {
+    flex: 0 0 33.33%;
+  }
+
+  &:after{
+    content: "";
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    border: 1px solid #00033B;
+    border-radius: 10em;
+    pointer-events: none;
+  }
+}
+
+.toggles-input {
+	display: none;
+
+	&:checked + .toggles__label {
+		background-color: #607BBE;
+		color: #607BBE;
+
+		&:before {
+			opacity: 1;
+		}
+		
+		&:last-of-type {
+			background: linear-gradient(90deg, green 0%, blue 100%);
+		}
+	}
+  &:nth-of-type(1) + label { order: 4 }
+	&:nth-of-type(2) + label { order: 3 }
+	&:nth-of-type(3) + label { order: 2 }
+	&:nth-of-type(4) + label { order: 1 }
+	
+	&:nth-of-type(1):checked,
+	&:nth-of-type(2):checked {
+		~ label:last-of-type {
+			margin-right: -33.33%;
+		}
+	}
+}
+
+.toggles-label{
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+
+	position: relative;
+	cursor: pointer;
+	transition: all 0.2s ease-out;
+  color: black;
+
+	&:hover {
+		color: #607BBE;
+	}
+
+	&:nth-of-type(2) {
+		border-left: 1px solid #00033B;
+		border-right: 1px solid #00033B;
+	}
+	
+	/* &:nth-of-type(3) {
+		margin: 7px
+	} */
 }
