--- a/src/styles/ZipProcess.css
+++ b/src/styles/ZipProcess.css
@@ -3,8 +3,9 @@ main.mainContainer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  /* font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif; */
+  font-family: "Roboto", "Verdana", "Geneva", sans-serif;  
   position: relative; /* Ensure proper positioning of background image */
 }
 
@@ -41,18 +42,19 @@ main.mainContainer {
   flex-direction: column;
   /* justify-content: center; */
   /* align-items: center; */
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  /* font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif; */
+  font-family: "Roboto", "Verdana", "Geneva", sans-serif;
   padding-left: 5rem;
   padding-right: 5rem;
   padding-top: 2rem;
-  background-color: #fff;
-  /* background: linear-gradient(
+  /* background-color: #fff; */
+  background: linear-gradient(
     180deg,
     rgb(206, 218, 238) 0%,
     rgb(235, 239, 246) 25%,
     rgb(255, 255, 255) 52%
-  ); */
+  );
   position: relative;
 }
 .bkgimg img {
@@ -210,14 +212,14 @@ main.mainContainer {
 }
 
 .project-name {
-  background-color: white;
+  /* background-color: white; */
   color: rgb(13, 25, 114);
   font-weight: bolder;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 0.25rem;
   padding-right: 1rem;
-  border-radius: 7rem;
+  /* border-radius: 7rem; */
   /* position: absolute; */
   /* min-width: fit-content; */
 }
@@ -240,8 +242,10 @@ main.mainContainer {
 }
 
 .slider-holder {
-  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
+  /* box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
     rgba(17, 17, 26, 0.1) 0px 0px 8px;
+  outline: 5px solid white; */
+  box-shadow: rgba(149, 157, 165, 0.7) 0px 8px 24px;
   outline: 5px solid white;
 }
 .project {
@@ -280,6 +284,7 @@ main.mainContainer {
 }
 
 .toggles{
+  scale: 0.8;
   position: absolute;
 
   right: 2rem;
@@ -346,6 +351,8 @@ main.mainContainer {
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
+  /* font-size: small;
+  font-weight: bold; */
 
 	position: relative;
 	cursor: pointer;
